# pyHIARD

./: .gitignore  AGC.py  Create_Database.py  LICENSE  MANIFEST.in  README.md  ROC.py  Sofia_Template.par  Template.def  common_functions.py  pyproject.toml  setup.py  version.py
Galaxies_In/Cubes/: Data_Cubes_Info.txt
Galaxies_In/Known_Models/M_83/: M_83.rotcur
Galaxies_In/Known_Models/NGC_3198/: NGC_3198.def
Galaxies_In/Known_Models/NGC_5023/: NGC_5023.def
Galaxies_In/Known_Models/NGC_5204/: NGC_5204.def
Galaxies_In/Known_Models/UGC_1281/: UGC_1281.def
docs/source/: advanced.rst  conf.py  configuration.rst  index.rst
pyHIARD/: __init__.py  common_functions.py  constants.py  main.py
pyHIARD.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyHIARD/AGC/: AGC.py  base_galaxies.py
pyHIARD/ROC/: ROC.py
pyHIARD/Resources/Cubes/: Data_Cubes_Info.txt
pyHIARD/Resources/Cubes/Circinus/: Circinus.py  Circinus.rotcur
pyHIARD/Resources/Cubes/ESO_223_G009/: ESO_223_G009.py  ESO_223_G009.rotcur
pyHIARD/Resources/Cubes/M_83/: M_83.py  M_83.rotcur
pyHIARD/Resources/Cubes/NGC_2903/: NGC_2903.def  NGC_2903.py
pyHIARD/Resources/Cubes/NGC_3198/: NGC_3198.def  NGC_3198.py
pyHIARD/Resources/Cubes/NGC_5023/: NGC_5023.py
pyHIARD/Resources/Cubes/NGC_5204/: NGC_5204.py
pyHIARD/Resources/Cubes/UGC_1281/: UGC_1281.py
pyHIARD/Resources/Cubes/UGC_7774/: UGC_7774.def  UGC_7774.py
pyHIARD/Templates/: Input.fits  Sofia_Template.par  Template.def  Template_Casa.py  Template_Header.py  roc_galaxy_template.py
pyHIARD/conf/: config.py
