[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyHIARD"
dynamic = ["version"]
description = "Development Status :: 4 - Beta"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.6"
authors = [
    { name = "P. Kamphuis", email = "peterkamphuisastronomy@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [ 'numpy>=1.14',
    'omegaconf>=2.2.2',
    'scipy>1.6.0',
    'matplotlib',
    'psutil',
    'astropy',
    'future-fstrings',
    'importlib_metadata',
    'casatasks; python_version >= "3.10"',
    'casadata; python_version >= "3.10"',
    'importlib_resources>=3.3.0; python_version < "3.7"',
]

[project.urls]
Homepage = "https://github.com/PeterKamphuis/pyHIARD"

[project.scripts]
pyHIARD = "pyHIARD.main:main"
pyHIARD_trace = "pyHIARD.main:main_with_trace"

[tool.hatch.version]
path = "version.py"



[tool.hatch.build.targets.sdist]
include = [
    "/pyHIARD",
]
